tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_38.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((z + 1223) >= (x - 1223));
               r := ((x + (1223 * z)) # (2 DIV (y - 2)));
               x := ((+ 2) MOD 1223);
               r := (1 < ((+ z) MOD x));
               y := x;
               y := (2 + ((+ 0) - (y MOD 200)));
               q := q;
               y := 1;
  (* error *)  x := 1223;
               z := x
END Test19.